RavenDB-15634 Double Scroll on Columns Selector Fix

--- a/src/Raven.Studio/wwwroot/Content/css/column-selector.less
+++ b/src/Raven.Studio/wwwroot/Content/css/column-selector.less
@@ -11,13 +11,12 @@
     padding: @grid-gutter-width/4;
     height: 400px;
     max-width: calc(100vw ~"-" @grid-gutter-width/3*4);
-    max-height: 55vh;
+    max-height: 40vh;
     display: flex;
     flex-direction: column;
 
     @media (min-width:@screen-sm) {
         width: 500px;
-        max-height: 65vh;
     }
 
     @media (min-width:@screen-md) {
